Fix #2913 new bug Buy Page: Spacing When 6 lines have been picked and the buttons go away, Powerplay is a bit close to the last line of numbers and neess to be moved down a bit. While retaining equal spacing between the labels for Powerplay, Draw, and Duration, increase the spacing between then a bit. Need a little more white space between the 2 button groups. Move Stake away from subscribe a bit - slightly close to buy button.

--- a/lot-ticket/app/css/app.css
+++ b/lot-ticket/app/css/app.css
@@ -218,6 +218,10 @@ html, body {
     outline: 0px solid transparent;
 }
 
+.layout-row.powerplay {
+	margin-top: 20px;
+}
+
 .layout-row.selected-bets.first-row {
 	 border-top: 1px solid  #e3e3e3;
 }
@@ -230,6 +234,10 @@ html, body {
 	box-shadow: 0 0 0;
 	background: transparent;
 	border-radius: 5px;
+}
+
+.layout-margin.quickpick-box {
+	margin-bottom: 0;
 }
 
 .top-header {
@@ -297,11 +305,12 @@ md-list.tickets-group {
 }
 
 .layout-row.stake-group {
-	margin-bottom: 30px;
+    margin-bottom: 20px;
+    margin-top: 0;
 }
 
 .layout-row.md-row {
-	margin-bottom: 0;
+	margin-bottom: 5px;
 }
 
 
